--- a/home.html
+++ b/home.html
@@ -3,7 +3,11 @@
 
 <meta charset="utf-8">
 <title>github-home</home>
-
+<link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.css">
+<script src="js/bootstrap.js"></script>
+  
+  
+  
 </head>
 <body>
 <h1>bienvenido</h1>
