--- a/home.html
+++ b/home.html
@@ -3,9 +3,14 @@
 
 <meta charset="utf-8">
 <title>github-home</home>
+<mete name="viewport" content="width=device-with, initial-scale=!">
+<title>Untitled Document</title>
 <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.css">
 <script src="js/bootstrap.js"></script>
-  
+  <div class="jumbotron text-center miEstilo">
+  		<h1>Página Bootstrap</h1>
+  		<p>Efecto de cambio utilizando Bootstrap en HTML</p>
+	</div>
   
   
 </head>
