--- a/home.html
+++ b/home.html
@@ -2,11 +2,23 @@
 <head>
 
 <meta charset="utf-8">
-<title>github-home</title>
-
+<title>github-home</home>
+<mete name="viewport" content="width=device-with, initial-scale=1">
+<link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.css">
+<script src="js/bootstrap.js"></script>
+  
+  
 </head>
 <body>
-<h1>bienvenido</h1>
-<img src="foto.jpg"/>
+	<div class="jumbotron text-center miEstilo">
+  <h1>bienvenido</h1>
+
+</div>
+  
+<div class="container">
+	<img src="img/foto.jpg" class="img-fluid rounded"
+	     alt="responsive image"/>
+	</div>
+
 </body>
 </html>
