--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>github-home</home>
+<title>github-home</title>
 <mete name="viewport" content="width=device-with, initial-scale=1">
 <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.css">
 <script src="js/bootstrap.js"></script>
