--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 </div>
   
 <div class="container">
-	<img src="img/foto.jpg" class="img-fluid rounded"
+	<img src="foto.jpg" class="img-fluid rounded"
 	     alt="responsive image"/>
 	</div>
 
